# irobo-2024-2025-projects

./: CMakeLists.txt  package.xml  proj2_ex1_cmds.txt
backup/: amcl_bag_data.npz  ekf_bag_data.npz
config/: ekf.yaml  final.pgm
launch/: aaa.launch  amcl.launch  dataset_amcl.launch  ekf_localization.launch  gmapping.launch  turtlebot3_playbag.launch
rviz/: amcl_localization.rviz  turtlebot3_visualize_localization_sim.rviz
scripts/: README.md  amcl_npz_retriever.py  calculate_error.py  ekf_npz_retriever.py  error_with_cov.py  position_with_cov.py  publish_amcl_error.py  publish_amcl_path.py  publish_ekf_error.py  publish_ekf_pose.py  publish_gt.py  publish_gtPath.py  publish_path_odom.py  publish_pose.py  retrieve_values.py  retrieve_values_amcl.py  transformed_amcl.py  transformed_ekf.py
scripts/graphs/: create_graphs_amcl.py  create_graphs_ekf.py  cumulative_errors.py  error_ekf.py  errors.py  estimated_amcl.py  estimated_ekf.py  parse_errors.py
scripts/graphs/amcl/: confidence_ellipse.py  error_amcl.py  estimated_amcl.py  gt_poses.py  parse_amcl.py
scripts/graphs/ekf/: confidence_ellipse.py  error_ekf.py  estimated_ekf.py  gt_poses.py  parse_ekf.py
