<?xml version="1.0"?>
<package format="2">
  <name>turtlebot3_datasets</name>
  <version>0.0.1</version>
  <description>Datasets to be used with turtlebot3 waffle pi</description>

  <!-- Maintainers -->
  <maintainer email="miguelrmiranda@tecnico.ulisboa.pt">Miguel Miranda</maintainer>
  <maintainer email="raquelfmcardoso@tecnico.ulisboa.pt">Raquel Cardoso</maintainer>
  <maintainer email="tomas.vilares.pereira@tecnico.ulisboa.pt">Tomás Pereira</maintainer>

  <!-- License -->
  <license>GPLv3</license>

  <!-- Build dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_msgs</exec_depend>

  <!-- Export section -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>

